overlays/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdqa-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "develop.pdqa"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdqa-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pdqa-backend-service
                port:
                  number: 4931
